# gui_timer

./: .gitignore  Cargo.toml
comms/: Cargo.toml
comms/src/: async_socket.rs  lib.rs  sync_socket.rs
gui/: Cargo.toml
gui/src/: app.rs  main.rs  timer.rs
gui_timer/: Cargo.toml
gui_timer/src/: main.rs
shared/: Cargo.toml
shared/src/: async_socket.rs  lib.rs  sync_socket.rs
src/: app.rs  main.rs  timer.rs  tray_icon.rs
src/comms/: async_socket.rs  mod.rs  sync_socket.rs
src/gui/: app.rs  mod.rs
src/tray/: comms.rs  mod.rs  tray_icon.rs
timer_tray/: Cargo.toml
timer_tray/src/: main.rs  tray_icon.rs
tray/: Cargo.toml
tray/src/: main.rs  tray_icon.rs
