[package]
name = "gui_timer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.31.1"
eframe = { version = "0.31.1", features = ["persistence"] }
serde = "1.0.219"
ksni = "0.3.1"
tokio = { version = "1.44.2", features = ["full"] }
image = { version = "0.25.6", default-features = false, features = ["png"] }
tokio-util = "0.7.14"
