[package]
name = "comms"
version = "0.1.0"
edition = "2024"

[dependencies]
bincode = { version = "2.0.1", features = ["serde"] }
interprocess = { version = "2.2.3", features = ["tokio"] }
serde = "1.0.219"
thiserror = "2.0.12"
tokio = { version = "1.44.2", features = ["io-std"] }

[dev-dependencies]
tempfile = "3.19.1"
