[package]
name = "tray"
version = "0.1.0"
edition = "2024"

[dependencies]
comms = { version = "0.1.0", path = "../comms" }
image = { version = "0.25.6", default-features = false, features = ["png"] }
interprocess = { version = "2.2.3", features = ["tokio"] }
ksni = "0.3.1"
tokio = { version = "1.44.2", features = ["full"] }
tokio-util = "0.7.14"
